add javascript, and its not working

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
-#warning-responses {
+#mild {
   display: none;
 }
 
-#symptom-responses {
+#moderate {
   display: none;
 }
 
-#rec-responses {
+#extreme {
   display: none;
 }
